# svg-painter

./: .gitignore  Cargo.toml  README.md  index.html  main.js  module.js  style.css  worker.js
.github/workflows/: deploy.yml
frontend/: index.html  main.js  style.css  worker.js
src/: approximation.rs  genetic.rs  lib.rs  main.rs  stroke.rs  util.rs
src/genetic/: base.rs  color.rs  genome.rs  svg.rs
src/util/: image.rs
