[package]
name = "svg_painter"
version = "0.1.0"
edition = "2021"
description = "Recreate a raster based image as a SVG."
repository = "https://github.com/AlexanderKosnac/svg_painter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24.1"
resvg = "0.41.0"
usvg = "0.41.0"
fontdb = "0.16.2"
tiny-skia = "0.11.4"
tiny-skia-path = "0.11.4"
rand = "0.8.5"
rand_distr = "0.4"
rayon = "1.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2.12", features = ["js"] }
